--- a/src/Components/Space News/SpaceNews.css
+++ b/src/Components/Space News/SpaceNews.css
@@ -8,6 +8,7 @@
     margin: 0;
 }
 .newsContainer{
+    background-color: bisque;
     width: 100%;
     display: flex;
     flex-direction: column;
