--- a/src/Components/Todo/Todo.css
+++ b/src/Components/Todo/Todo.css
@@ -1,3 +1,10 @@
+.Todo{
+  margin-top: 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .Todo input {
   margin: 10px;
   width: 300px;
@@ -5,7 +12,7 @@
   font-size: 16px;
   padding-left: 10px;
 }
-.Todo button {
+.todo-buttons {
   font-size: medium;
   width: 100px;
   height: 40px;
@@ -15,32 +22,80 @@
   color: white;
   border: none;
   border-radius: 5px;
+  transition: transform 0.3s ease;
 }
-.Todo button:hover {
+.todo-buttons:disabled {
+  background-color: #a9a9a9;
+  cursor: not-allowed;
+}
+.todo-buttons:hover:not(:disabled) {
+  background-color: #ff7f50;
   cursor: pointer;
+  transform: scale(1.1);
+}
+.deleteButton {
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+.deleteButton:hover {
+  transform: scale(1.1);
 }
 ul{
   display: grid;
   place-items: center;
+  margin-top: 20px;
 }
 li{
   list-style-type: none;
   width: 300px;
-  height: 35px;
-  background-color: #00df6c;
+  height: 40px;
   margin: 10px;
-  padding-top: 20px;
+  padding: 10px;
   color: white;
-  font-family: monospace;
-  font-size: 22px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 #task{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
+  width: 100%;
+  padding: 10px;
+  margin: 10px;
+  /* background-color: #f5f5f5; */
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
+.task-pending li {
+  background-color: #57d594;
+  border-radius: 5px;
+}
+.task-completed li {
+  background-color: #9befc3;
+  border-radius: 5px;
+  text-decoration: line-through;
+}
+
 .Todo h2{
-  font-family: monospace;
+  font-family: 'Roboto', sans-serif;
   padding: 8px;
+  color: #333;
+}
+
+.swal2-confirm {
+  width: auto !important;
+  padding: 10px 20px !important;
+  font-size: 16px !important;
+}
+.swal2-confirm:hover {
+  background-color: #7066e0 !important;
+  opacity: 0.7 !important;
+}
+.swal2-cancel {
+  width: auto !important;
+  padding: 10px 20px !important;
+  font-size: 16px !important;
 }
